@@ -30,6 +30,7 @@ else (WIN32)
     option(ENABLE_HTTPS_SUPPORT "Enable HTTPS URLs for Last.fm, Wikipedia, SoundCloud, etc." ON)
 endif (WIN32)
 option(ENABLE_KDE "Enable KDE libraries" ON)
+option(ENABLE_KWALLET "Use KWallet in KDE builds" ON)
 option(ENABLE_QT5 "Build against Qt5" OFF)
 option(ENABLE_MTP "Enable MTP library(required to support MTP devices)" ON)
 option(ENABLE_FFMPEG "Enable ffmpeg/libav libraries(required for replaygain calculation)" ON)
